Fixed text wrapping img on index.html, changed footer and navbar to fixed

--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ body {
     background-color: aquamarine;
 }
 
+#about_img {
+    height: 350px;
+    float: left;
+    margin-right: 15px;
+}
+
 #contact_col {
     margin-top: 120px;
     margin-bottom: 120px;
@@ -51,9 +57,9 @@ body {
 }
 
 
-div .col-md-6 {
+/* div .col-md-6 {
     padding: 15px;
-}
+} */
 
 /* div .col-md-6 h3 {
     position: absolute;
